CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/documento_oportunidad_sales__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar y administrar los documentos necesarios en la oportunidad</description>
    <label>Documento Oportunidad</label>
    <nameField>
        <label>Nombre Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos Oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>