CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/Aprobado_sales__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que valida si un documento ya fue aprobado y bloquea la picklist</description>
    <label>Documento Aprobado</label>
    <type>Checkbox</type>
</CustomField>