CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/check_documento_sales__c.field-meta.xml
<CustomField>
    <fullName>check_documento_sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Documento</label>
    <type>Checkbox</type>
</CustomField>