CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/detalle_documento_sales__c.field-meta.xml
<CustomField>
    <fullName>detalle_documento_sales__c</fullName>
    <description>Guarda el detalle del documento adicional solicitado.</description>
    <label>Detalle Documento</label>
    <type>TextArea</type>
</CustomField>