CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/estado_documento_sales__c.field-meta.xml
<CustomField>
    <fullName>estado_documento_sales__c</fullName>
    <description>Campo para almacenar el estado del documento en la Oportunidad</description>
    <label>Estado del Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>