CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/Id_Alfresco_sales__c.field-meta.xml
<CustomField>
    <fullName>Id_Alfresco_sales__c</fullName>
    <description>Id documento cargado en Alfresco</description>
    <externalId>true</externalId>
    <label>Id Alfresco</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>