CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/observaciones_sales__c.field-meta.xml
<CustomField>
    <fullName>observaciones_sales__c</fullName>
    <label>Observaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>