CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/opportunity_sales__c.field-meta.xml
<CustomField>
    <fullName>opportunity_sales__c</fullName>
    <description>Objeto relacionado a oportunidad y que almacena los documentos solicitados para hipotecario.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documentos Oportunidad</relationshipLabel>
    <relationshipName>Documentos_Oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>