CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/orden_doc_sales__c.field-meta.xml
<CustomField>
    <fullName>orden_doc_sales__c</fullName>
    <label>orden_doc_sales</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>