CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/Participante_sales__c.field-meta.xml
<CustomField>
    <fullName>Participante_sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante</label>
    <referenceTo>participante_sales__c</referenceTo>
    <relationshipLabel>Documentos Oportunidad</relationshipLabel>
    <relationshipName>Documentos_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>