CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/tipo_documento_sales__c.field-meta.xml
<CustomField>
    <fullName>tipo_documento_sales__c</fullName>
    <description>Campo para almacenar los tipos de documentos que se solicitan en recopilación para hipotecario.</description>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cédula de Identidad</fullName>
            </value>
            <value>
                <fullName>Activos Circulantes</fullName>
            </value>
            <value>
                <fullName>Vehículos</fullName>
            </value>
            <value>
                <fullName>Propiedades</fullName>
            </value>
            <value>
                <fullName>Pasivos</fullName>
            </value>
            <value>
                <fullName>Pie</fullName>
            </value>
            <value>
                <fullName>Liquidaciones de Sueldo</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>Honorarios</fullName>
            </value>
            <value>
                <fullName>Impuestos</fullName>
            </value>
            <value>
                <fullName>Certificado de Matrimonio</fullName>
            </value>
            <value>
                <fullName>Ficha Cliente</fullName>
            </value>
            <value>
                <fullName>Foto Selfie</fullName>
            </value>
            <value>
                <fullName>Declaración Impuestos</fullName>
            </value>
            <value>
                <fullName>Ingreso Negocio Comercializador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>