CNSDEVCOLECT/force-app/main/default/objects/documento_oportunidad_sales__c/fields/tipo_oportunidad_sales__c.field-meta.xml
<CustomField>
    <fullName>tipo_oportunidad_sales__c</fullName>
    <label>tipo_oportunidad_sales</label>
    <length>100</length>
    <type>Text</type>
</CustomField>